--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Ensine-se Ciência da Computação
+description: Guia para auxiliar no aprendizado autodidata de ciência da computação
